# fig

./: Cargo.toml  README.md  fig.json
examples/: application.properties-template
src/: main.rs
