[package]
name = "Fig"
version = "0.1.0"
authors = ["Hildeberto Mendonca"]
edition = "2021"
description = "An alternative to manage configuration files based on configuration templates under version control."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
