[package]
name = "fig"
version = "0.1.0"
authors = ["Hildeberto Mendonca"]
edition = "2021"
description = "An alternative to manage configuration files based on configuration templates under version control."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
